Design main content for desktop

--- a/index.html
+++ b/index.html
@@ -21,6 +21,22 @@
             <img class="burger-nav-img" src="assets/burger-nav.png" alt="Icône du
             burger de navigation" />
         </div>
+        <nav class="main-nav">
+            <ul class="nav-ul">
+                <li class="navigation-item">
+                    <a href="#">Event details</a>
+                </li>
+                <li class="navigation-item">
+                    <a href="#">About us</a>
+                </li>
+                <li class="navigation-item">
+                    <a href="#">Contact</a>
+                </li>
+                <li class="navigation-item">
+                    <a href="#">Pass events</a>
+                </li>
+            </ul>
+        </nav>
     </header>
     <main class="w-90 main-content">
         <h1 class="main-title">
