Almost done with desktop integration

--- a/index.html
+++ b/index.html
@@ -39,13 +39,16 @@
         </nav>
     </header>
     <main class="w-90 main-content">
-        <h1 class="main-title">
-            US Nationwide Game-a-Thon
-        </h1>
-        <p class="main-paragraph">
-            Do you live to game? Our next gaming event is now accepting
-            reservations for players, but spots are limited.
-        </p>
+        <div class="main-content-text">
+            <h1 class="main-title">
+                US Nationwide Game-a-Thon
+            </h1>
+            <p class="main-paragraph">
+                Do you live to game? Our next gaming event is now accepting
+                reservations for players, but spots are limited.
+            </p>
+        </div>
+        <div class="bg-black"></div>
         <div class="main-img-wrapper">
             <img class="main-img" alt="" src="assets/main-content-image.jpg" />
         </div>
