Finish coding the project

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <main class="w-90 main-content">
         <div class="main-content-text">
             <h1 class="main-title">
-                US Nationwide Game-a-Thon
+                US Nationwide<span class="br"></span> Game-a-Thon
             </h1>
             <p class="main-paragraph">
                 Do you live to game? Our next gaming event is now accepting
